third_party/WebKit/LayoutTests/http/tests/devtools/sources/debugger/rethrow-error-from-bindings-crash-expected.txt
CONSOLE ERROR: line 25: Uncaught TypeError: Failed to execute 'compareBoundaryPoints' on 'Range': parameter 2 is not of type 'Range'.
CONSOLE ERROR: line 20: Uncaught TypeError: Failed to execute 'appendChild' on 'Node': parameter 1 is not of type 'Node'.
CONSOLE ERROR: line 25: Uncaught TypeError: Failed to execute 'compareBoundaryPoints' on 'Range': parameter 2 is not of type 'Range'.
CONSOLE ERROR: line 20: Uncaught TypeError: Failed to execute 'appendChild' on 'Node': parameter 1 is not of type 'Node'.
CONSOLE ERROR: line 25: Uncaught TypeError: Failed to execute 'compareBoundaryPoints' on 'Range': parameter 2 is not of type 'Range'.
CONSOLE ERROR: line 20: Uncaught TypeError: Failed to execute 'appendChild' on 'Node': parameter 1 is not of type 'Node'.
CONSOLE ERROR: line 25: Uncaught TypeError: Failed to execute 'compareBoundaryPoints' on 'Range': parameter 2 is not of type 'Range'.
CONSOLE ERROR: line 20: Uncaught TypeError: Failed to execute 'appendChild' on 'Node': parameter 1 is not of type 'Node'.
Tests that pausing on uncaught exceptions thrown from C++ bindings will not crash.

Set timer for test function.
rethrow-error-from-b…dings-crash.html:11 Console was cleared
rethrow-error-from-b…dings-crash.html:25 Uncaught TypeError: Failed to execute 'compareBoundaryPoints' on 'Range': parameter 2 is not of type 'Range'.
    at f2 (rethrow-error-from-b…dings-crash.html:25)
    at testFunction (rethrow-error-from-b…dings-crash.html:15)
f2 @ rethrow-error-from-b…dings-crash.html:25
testFunction @ rethrow-error-from-b…dings-crash.html:15
setTimeout (async)
scheduleTestFunction @ debugger-test.js:3
(anonymous) @ VM:1
rethrow-error-from-b…dings-crash.html:20 Uncaught TypeError: Failed to execute 'appendChild' on 'Node': parameter 1 is not of type 'Node'.
    at f1 (rethrow-error-from-b…dings-crash.html:20)
f1 @ rethrow-error-from-b…dings-crash.html:20
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
testFunction @ rethrow-error-from-b…dings-crash.html:15
setTimeout (async)
scheduleTestFunction @ debugger-test.js:3
(anonymous) @ VM:1
rethrow-error-from-b…dings-crash.html:25 Uncaught TypeError: Failed to execute 'compareBoundaryPoints' on 'Range': parameter 2 is not of type 'Range'.
    at f2 (rethrow-error-from-b…dings-crash.html:25)
f2 @ rethrow-error-from-b…dings-crash.html:25
setTimeout (async)
f1 @ rethrow-error-from-b…dings-crash.html:19
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
testFunction @ rethrow-error-from-b…dings-crash.html:15
setTimeout (async)
scheduleTestFunction @ debugger-test.js:3
(anonymous) @ VM:1
rethrow-error-from-b…dings-crash.html:20 Uncaught TypeError: Failed to execute 'appendChild' on 'Node': parameter 1 is not of type 'Node'.
    at f1 (rethrow-error-from-b…dings-crash.html:20)
f1 @ rethrow-error-from-b…dings-crash.html:20
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
setTimeout (async)
f1 @ rethrow-error-from-b…dings-crash.html:19
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
testFunction @ rethrow-error-from-b…dings-crash.html:15
setTimeout (async)
scheduleTestFunction @ debugger-test.js:3
(anonymous) @ VM:1
rethrow-error-from-b…dings-crash.html:25 Uncaught TypeError: Failed to execute 'compareBoundaryPoints' on 'Range': parameter 2 is not of type 'Range'.
    at f2 (rethrow-error-from-b…dings-crash.html:25)
f2 @ rethrow-error-from-b…dings-crash.html:25
setTimeout (async)
f1 @ rethrow-error-from-b…dings-crash.html:19
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
setTimeout (async)
f1 @ rethrow-error-from-b…dings-crash.html:19
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
testFunction @ rethrow-error-from-b…dings-crash.html:15
setTimeout (async)
scheduleTestFunction @ debugger-test.js:3
(anonymous) @ VM:1
rethrow-error-from-b…dings-crash.html:20 Uncaught TypeError: Failed to execute 'appendChild' on 'Node': parameter 1 is not of type 'Node'.
    at f1 (rethrow-error-from-b…dings-crash.html:20)
f1 @ rethrow-error-from-b…dings-crash.html:20
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
setTimeout (async)
f1 @ rethrow-error-from-b…dings-crash.html:19
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
setTimeout (async)
f1 @ rethrow-error-from-b…dings-crash.html:19
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
testFunction @ rethrow-error-from-b…dings-crash.html:15
setTimeout (async)
scheduleTestFunction @ debugger-test.js:3
(anonymous) @ VM:1
rethrow-error-from-b…dings-crash.html:25 Uncaught TypeError: Failed to execute 'compareBoundaryPoints' on 'Range': parameter 2 is not of type 'Range'.
    at f2 (rethrow-error-from-b…dings-crash.html:25)
f2 @ rethrow-error-from-b…dings-crash.html:25
setTimeout (async)
f1 @ rethrow-error-from-b…dings-crash.html:19
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
setTimeout (async)
f1 @ rethrow-error-from-b…dings-crash.html:19
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
setTimeout (async)
f1 @ rethrow-error-from-b…dings-crash.html:19
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
testFunction @ rethrow-error-from-b…dings-crash.html:15
setTimeout (async)
scheduleTestFunction @ debugger-test.js:3
(anonymous) @ VM:1
rethrow-error-from-b…dings-crash.html:20 Uncaught TypeError: Failed to execute 'appendChild' on 'Node': parameter 1 is not of type 'Node'.
    at f1 (rethrow-error-from-b…dings-crash.html:20)
f1 @ rethrow-error-from-b…dings-crash.html:20
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
setTimeout (async)
f1 @ rethrow-error-from-b…dings-crash.html:19
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
setTimeout (async)
f1 @ rethrow-error-from-b…dings-crash.html:19
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
setTimeout (async)
f1 @ rethrow-error-from-b…dings-crash.html:19
setTimeout (async)
f2 @ rethrow-error-from-b…dings-crash.html:24
testFunction @ rethrow-error-from-b…dings-crash.html:15
setTimeout (async)
scheduleTestFunction @ debugger-test.js:3
(anonymous) @ VM:1

